@@ -1,5 +1,10 @@
 2005-05-17  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* elfxx-ia64.c (elfNN_ia64_relax_br): Keep the original
+	predicate on slot 0 only if slot 0 isn't br.
+
+2005-05-17  H.J. Lu  <hongjiu.lu@intel.com>
+
 	PR 797
 	* elf32-i386.c (elf_i386_size_dynamic_sections): Also remove
 	empty sdynbss section.
